# Vuln-Analysis-Neural-Network

./: .gitignore  README.md  Vuln-Analysis-Neural-Network.ipynb  neuralnetwork.py  pyproject.toml  requirements.txt
grounddata/: _sample.csv
