[tool.poetry]
name = "jsrepo-nn"
version = "0.1.0"
description = ""
authors = ["Anxiu0101 <anxiu.fyc@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
plotext = "^5.3.2"
matplotlib = "^3.9.2"
imblearn = "^0.0"
scipy = "^1.14.1"
seaborn = "^0.13.2"
notebook = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
